--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.0.3",
+    "@types/emoji-mart": "^3.0.9",
     "daisyui": "^2.17.0",
+    "emoji-mart": "^5.1.0",
+    "emoji-picker-react": "^3.5.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-twemoji-picker": "github:brianhung/emojipicker"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
