--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@emoji-mart/data": "^1.0.3",
     "@types/emoji-mart": "^3.0.9",
+    "@types/react-twemoji": "^0.4.0",
     "daisyui": "^2.17.0",
     "emoji-mart": "^5.1.0",
     "emoji-picker-react": "^3.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-twemoji": "^0.5.0",
     "react-twemoji-picker": "github:brianhung/emojipicker"
   },
   "devDependencies": {
